--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "highcharts": "^6.1.3",
+    "highcharts-react-official": "^1.4.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-highcharts": "^16.0.2",
